fix: white background when reloading on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 html,
+body,
 #root {
   background-color: #242424;
   scroll-behavior: smooth;
